<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.coordinadora.test.ui.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/home"
            app:popUpToInclusive="true">
            <argument
                android:name="user"
                app:argType="com.coordinadora.test.ui.login.model.User" />
        </action>
        <action
            android:id="@+id/action_loginFragment_to_register"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        tools:layout="@layout/fragment_home"
        android:name="com.coordinadora.test.ui.home.HomeFragment"
        android:label="@string/home_fragment">
        <argument
            android:name="user"
            app:argType="com.coordinadora.test.ui.login.model.User" />
        <action
            android:id="@+id/home_to_movements"
            app:destination="@id/movements">
            <argument
                android:name="movement"
                app:argType="com.coordinadora.test.ui.movements.model.Movement" />
            <argument
                android:name="userBanking"
                app:argType="com.coordinadora.test.ui.home.model.UserBanking" />
        </action>
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        tools:layout="@layout/fragment_register_form"
        android:name="com.coordinadora.test.ui.register.RegisterFormFragment"
        android:label="@string/register_fragment" >
        <action
            android:id="@+id/action_registerFragment_to_registerPhotoFragment"
            app:destination="@id/registerPhotoFragment">
            <argument
                android:name="user"
                app:argType="com.coordinadora.test.ui.login.model.User" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/registerPhotoFragment"
        tools:layout="@layout/fragment_register_photo"
        android:name="com.coordinadora.test.ui.register.RegisterPhotoFragment"
        android:label="@string/register_photo_fragment" >
        <argument
            android:name="user"
            app:argType="com.coordinadora.test.ui.login.model.User" />
        <action
            android:id="@+id/action_registerPhotoFragment_to_homeFragment"
            app:destination="@id/homeFragment">
            <argument
                android:name="user"
                app:argType="com.coordinadora.test.ui.login.model.User" />
        </action>
    </fragment>


    <fragment
        android:id="@+id/movements"
        tools:layout="@layout/fragment_movements"
        android:name="com.coordinadora.test.ui.movements.MovementFragment"
        android:label="@string/movement_fragment">
        <argument
            android:name="movement"
            app:argType="com.coordinadora.test.ui.movements.model.Movement" />
        <argument
            android:name="userBanking"
            app:argType="com.coordinadora.test.ui.home.model.UserBanking" />
    </fragment>
   </navigation>