<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="clickHandler"
        type="com.bankingapp.test.ui.register.listener.RegisterPhotoListener" />
    <variable
        name="viewModel"
        type="com.bankingapp.test.ui.register.viewmodel.RegisterViewModel" />
    <variable
        name="toolbarListener"
        type="com.bankingapp.test.ui.toolbar.ToolbarFunctions" />
    <variable
        name="titleToolbar"
        type="String" />

</data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@drawable/background_screen">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleToolbar="@{titleToolbar}"
            app:toolbarListener="@{toolbarListener}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_register_photo"
            style="@style/title_tv_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        </TextView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/photo_size"
            android:layout_height="@dimen/photo_size"
            tools:src="@drawable/select_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.42000002" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_photo_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/add_photo"
            app:fabSize="normal"
            android:onClick="@{(v)-> clickHandler.clickTakePhotoButton()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/ic_photo" />

        <!-- Action name text for the add alarm button -->
        <!-- Make sure that you are constraining this Text to
             the add Alarm FAB button -->
        <TextView
            android:id="@+id/add_action_photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/tv_add_photo_register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/add_photo_fab"
            app:layout_constraintEnd_toStartOf="@+id/add_photo_fab"
            app:layout_constraintTop_toTopOf="@+id/add_photo_fab" />

        <Button
            android:id="@+id/register_form_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size"
            android:layout_marginTop="@dimen/margin_size_extra"
            android:layout_marginEnd="@dimen/margin_size"
            android:layout_marginBottom="@dimen/margin_size_extra"
            android:backgroundTint="@color/secondary_variant"
            android:text="@string/register"
            android:textAllCaps="false"
            android:onClick="@{(v)->clickHandler.clickAcceptButton()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>