<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="clickHandler"
            type="com.bankingapp.test.ui.login.listener.LoginListener" />

        <variable
            name="baseClickHandler"
            type="com.bankingapp.test.utils.base.BaseListener" />


    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/stori_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size"
        android:layout_marginEnd="@dimen/margin_size"
        android:src="@drawable/bank_logo"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_extra"
        android:layout_marginEnd="@dimen/margin_size_extra"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/userName"
                android:textColor="@color/primary"
                android:textSize="@dimen/login_field"
                android:drawablePadding="@dimen/drawable_padding"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableStartCompat="@drawable/ic_user" />


            <!--modifiy the hint of field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:layout_marginEnd="@dimen/margin_size"
                android:hint="@string/hint_user_name_login"
                android:textColorHint="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ed_background"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/edit_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_current_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size_extra"
                android:text="@string/pin"
                android:textColor="@color/primary"
                android:textSize="@dimen/login_field"
                android:drawablePadding="@dimen/drawable_padding"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_email"
                app:drawableStartCompat="@drawable/ic_lock" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_size"
                android:background="@android:color/transparent"
                android:hint="@string/hint_pin_login"
                android:textColorHint="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_current_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ed_background"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/edit_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size_extra"
                android:layout_marginEnd="@dimen/margin_size"
                android:layout_marginBottom="@dimen/margin_size_extra"
                android:backgroundTint="@color/secondary_variant"
                android:onClick="@{(v)-> baseClickHandler.clickAcceptButton()}"
                android:text="@string/login_button"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/register_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_extra"
        android:layout_marginTop="@dimen/margin_size_extra"
        android:layout_marginEnd="@dimen/margin_size_extra"
        android:text="@string/register_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:onClick="@{(v)-> clickHandler.clickRegister()}"
        android:textSize="@dimen/register_size_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>